# gbin

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
C/: CMakeLists.txt  README.md
C/benches/: gbf_bench.c
C/examples/: gbf_client.c
C/include/gbin/: gbf.h  gbf_easy.h
C/src/: gbf.c  gbf_easy.c  gbf_internal.h  gbf_json.c  gbf_util.c
C/tests/: test_gbf_roundtrip.c
C/tools/: gbf_easy_demo.c  gbin_cli.c
CPP/: CMakeLists.txt  README.md
CPP/benches/: gbf_bench.cpp
CPP/include/gbin/: gbf.hpp  gbf_easy.hpp
CPP/src/: gbf.cpp
CPP/tests/: test_gbf_roundtrip.cpp
CPP/tools/: gbf_demo.cpp  gbin_cli.cpp
MATLAB/: Gbin.m  Gbin_Interface.m  Gbin_Test.m  README.md
RUST/: Cargo.toml  README.md
RUST/benches/: gbf_bench.rs
RUST/src/: codec.rs  error.rs  gbin.rs  header.rs  lib.rs  value.rs
RUST/tests/: gbf_roudtrip.rs
