[package]
name = "gbin"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Reader/writer for MATLAB Gbin GBF (GREDBIN) files."
repository = "https://github.com/clicat/Gbin"
readme = "README.md"
keywords = ["matlab", "serialization", "binary", "json", "zlib"]
categories = ["encoding", "parser-implementations"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = "1.0"
crc32fast = "1.3"
regex = "1.10"
once_cell = "1.19"
thiserror = "1.0"
tempfile = "3.10"
time = { version = "0.3", features = ["formatting", "macros"] }
crossterm = "0.27"
ratatui = "0.28"

anyhow = "1"
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
rand = "0.8"
criterion = "0.5"
tempfile = "3"

[[bench]]
name = "gbf_bench"
harness = false

[[bin]]
name = "gbin"
path = "src/gbin.rs"